--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,15 +1,33 @@
 <% layout('./layouts/boilerplate') %>
-    <h1>Edit Campground</h1>
-    <form action="/campground/<%=campground.id%>?_method=PUT" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="campground[title]" value="<%=campground.title %>">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="campground[location]" value="<%= campground.location%>">
-        </div>
-        <button>Update Campground</button>
-    </form>
-    <a href="/campground/<%= campground.id%>">Back To Campground</a>
-
+    <h1 class="text-center">Edit Campground</h1>
+    <div class="row">
+        <form class = "col-md-6 offset-3" action="/campground" method="POST">
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" class="form-control" id="Title" name='title'value="<%=campground.title %> aria-describedby="title">
+              </div>
+              <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" class="form-control" name='location' id="location" value="<%= campground.location%>">
+              </div>
+              <div class="mb-3">
+                <label class="form-label" for="Imageurl">imageurl</label>
+                <input type="text" class="form-control" name='image' id="imageurl"  value="<%= campground.image%>">
+              </div>
+               <div class="mb-3">
+                <label class="form label" for="price">Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price">@</span>
+                    <input type="text" name='price' class="form-control" placeholder="0.00" aria-label="Price" aria-describedby="price" value="<%= campground.price%>">
+                </div>   
+                
+              </div>
+               <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" name='description' id="description" rows="3"></textarea value="<%= campground.description%>">
+              </div>
+              <button type="submit" class="btn btn-success text-center">Edit this Campground</button>
+        </form>
+            <a class="text-center" href="/campground/<%= campground.id%>">Back To Campground</a>
+    </div>    
+    
