--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('./layouts/boilerplate') %>
 
     <div class="row">
-        <div class="card col-md-6 offset-3 mb-3">
+        <div class="card col-md-6 mb-3">
             <img src="<%= campground.image %>" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title text-center"><%= campground.title %></h5>
@@ -17,8 +17,39 @@
                 <form class='d-inline' action="/campground/<%= campground.id %>?_method=DELETE" method="POST">
                     <button class="btn btn-warning">Delete</button>
                 </form>
-                </div>
+            </div>
         </div>
+        <div class="col-6">
+            <h2>Leave a Review</h2>
+            <form action="/campground/<%= campground.id %>/reviews" method="POST">
+                <div class="mb-3">
+                    <label for="rating" class="form-label">Rating</label>
+                    <input type="range" class="form-range" name="rating" id="rating" min="1" max="5">
+                </div>
+                <div class="mb-3">
+                    <label for="opinion" class="form-label">Review</label>
+                    <textarea class="form-control" name="opinion" id="opinion" cols="30" rows="3"></textarea>
+                </div>    
+                    <button class="btn btn-success">submit</button>
+            </form>
+                <% for (let review of campground.reviews) { %>
+                    <div class="card mt-3">
+                        <div class="card-body">
+                            <h5>Rating:<%= review.rating %></h5>
+                            <p><%= review.opinion %></p>
+                            <form action="/campground/<%= campground.id %>/reviews/<%=review.id %>?_method=Delete" method="POST">
+                                <button class="btn btn-sm btn btn-danger">DELETE</button>
+                            </form>
+                            
+                        </div>
+                     
+                    </div>
+                    <% } %>    
+        </div>
+            
+            </form>
+         
+        
            
     </div>
     
