--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,5 +1,11 @@
 <% if(success && success.length){ %>
-    <div class="alert alert-success" role="alert">
-        <%= success %>
+    <div class="row">
+        <div class="col-md-6 offset-3">
+            <div class="alert alert-success" role="alert">
+                <%= success %>
+            </div>
+        </div>
+     
     </div>
+    
 <% } %>
