--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout('./layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheet/star.css">
    
     <div class="row">
         <div class="card col-md-6 mb-3">
@@ -8,9 +9,11 @@
             </div> 
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><%= campground.description %></li>
+                <li class="list-group-item">Submitted By  <%= campground.author.username %></li>
                 <li class="list-group-item"><%= campground.location %></li>
                 <li class="list-group-item">NRP:  <%= campground.price %></li>
             </ul>
+            <% if(currentuser && campground.author.equals(currentuser.id) ) { %> 
             <div class="card-body d-inline">
                 <a href="/campground" class="btn btn-info">Campgrounds</a>
                 <a href="/campground/<%= campground.id %>/edit" class="btn btn-danger">Edit</a>
@@ -18,16 +21,30 @@
                     <button class="btn btn-warning">Delete</button>
                 </form>
             </div>
+            <% } %> 
         </div>
         <div class="col-6">
             <h2>Leave a Review</h2>
             <form action="/campground/<%= campground.id %>/reviews" method="POST">
-                <div class="mb-3">
-                    <label for="rating" class="form-label">Rating</label>
-                    <input type="range" class="form-range" name="rating" id="rating" min="1" max="5">
+                <div class="mb-0 mt-3">
+                    <fieldset class="starability-basic">
+                        <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
+                        <input type="radio" id="first-rate1" name="rating" value="1" />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="rating" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="rating" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="rating" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="rating" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+                      </fieldset>
+                   
                 </div>
+                
                 <div class="mb-3">
-                    <label for="opinion" class="form-label">Review</label>
+                    <label for="opinion" class="form-label">Review:</label>
                     <textarea class="form-control" name="opinion" id="opinion" cols="30" rows="3"></textarea>
                 </div>    
                     <button class="btn btn-success">submit</button>
@@ -35,12 +52,17 @@
                 <% for (let review of campground.reviews) { %>
                     <div class="card mt-3">
                         <div class="card-body">
-                            <h5>Rating:<%= review.rating %></h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Submitted by: <%= review.author.username %> </h6>
+                            <p class="starability-result" data-rating="<%= review.rating %>">
+                                Rated: <%= review.rating  %>  stars
+                              </p>
+                           
                             <p><%= review.opinion %></p>
-                            <form action="/campground/<%= campground.id %>/reviews/<%=review.id %>?_method=Delete" method="POST">
-                                <button class="btn btn-sm btn btn-danger">DELETE</button>
-                            </form>
-                            
+                            <% if(currentuser && review.author.equals(currentuser.id) ) { %> 
+                                <form action="/campground/<%= campground.id %>/reviews/<%=review.id %>?_method=Delete" method="POST">
+                                    <button class="btn btn-sm btn btn-danger">DELETE</button>
+                                </form>
+                            <% } %> 
                         </div>
                      
                     </div>
