--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,5 +1,5 @@
 <% if(success && success.length){ %>
-    <div class="row">
+    <div class="row text-center">
         <div class="col-md-6 offset-3">
             <div class="alert alert-success" role="alert">
                 <%= success %>
