--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -24,7 +24,7 @@
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="text" class="form-control" name='password' id="password"required>
+            <input type="password" class="form-control" name='password' id="password"required>
             <div class="invalid-feedback">
               Please enter the required Location !
             </div>
