--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -22,18 +22,8 @@
               Looks Nice !
             </div>
           </div>
-          <div class="mb-3">
-            <label class="form-label"for="image">images</label>
-            <input type="file" name="image" id="image" class="form-control" multiple>
-            <!-- <label class="form-label" for="Imageurl">imageurl</label>
-            <input type="text" class="form-control" name='image' id="imageurl"required> -->
-            <div class="invalid-feedback">
-              Please enter the  required imageurl !
-            </div>
-            <div class="valid-feedback">
-              Looks Nice !
-            </div>
-          </div>
+          
+          
            <div class="mb-3">
             <label class="form label" for="price">Price</label>
             <div class="input-group">
@@ -57,7 +47,18 @@
             <div class="valid-feedback">
               Looks Nice !
             </div>
+            <div class="mb-3">
+              <label for="image" class="form-label">Insert Images(S)...</label>
+              <input class="form-control" type="file" name='image' id="image" multiple>
+            
+            <div class="invalid-feedback">
+              Please enter the  required imageurl !
+            </div>
+            <div class="valid-feedback">
+              Looks Nice !
+            </div>
           </div>
+        </div>
           <button type="submit" class="btn btn-success">Add Campground</button>
     </form>
 </div>    
