--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,6 @@
 <% layout('./layouts/boilerplate') %>
+<div id="map" style="width:100%; height:500px;"></div>
+
     <h1>All the campground</h1>
     
     <% for (let campground of campgrounds ) { %>
@@ -9,6 +11,7 @@
                 </div>
                 <div class="col-md-8">
                     <h5 class="card-title"><%= campground.title %></h5>
+                    <div class="card-title"><%= campground.properties.popUpMarkup %> </div>
                     <p class="card-text"><%= campground.description %></p>
                     <p class="card-text text-muted"><%= campground.location %></p>
                     <a href="/campground/<%= campground.id %>" class="btn btn-primary d-inline "><%= campground.title %></a>
@@ -16,3 +19,9 @@
             </div>
         </div>
     <% } %>
+    <script>
+        const maptoken = '<%-process.env.MAPBOX_TOKEN%>';
+        const campgrounds ={features:<%- JSON.stringify(campgrounds) %>} 
+    </script>
+        <script src="/JS/clustermap.js"></script>
+    
