--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,6 @@
 <link rel="stylesheet" href="/stylesheet/star.css">
 <div class="row">
     <div class="col-6">
-        <div id='map' style='width: 400px; height: 300px;'></div>
 
         <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -51,8 +50,9 @@
 
     </div>
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;'></div>
 
-        <h2>Leave a Review</h2>
+        <h2 class="mt-3">Leave a Review</h2>
         <form action="/campground/<%=campground.id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
            
             <fieldset class="starability-basic">
