--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,43 +1,40 @@
 <% layout('./layouts/boilerplate') %>
 
-<div class="row">
-    <form class = "col-md-6 offset-3 needs-validation" novalidate action="/register" method="POST">
-        <div class="mb-3">
-            <label for="email" class="form-label">email</label>
-            <input type="text" class="form-control" id="email" name='email'required>
-            <div class="invalid-feedback">
-              Please enter the required title !
-            </div>
-            <div class="valid-feedback">
-              Looks Nice !
-            </div>
-          </div>
-          <div class="mb-3">
-            <label for="username" class="form-label">User</label>
-            <input type="text" class="form-control" name='username' id="username"required>
-            <div class="invalid-feedback">
-              Please enter the required Location !
-            </div>
-            <div class="valid-feedback">
-              Looks Nice !
-            </div>
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" name='password' id="password"required>
-            <div class="invalid-feedback">
-              Please enter the required Location !
-            </div>
-            <div class="valid-feedback">
-              Looks Nice !
-            </div>
-          </div>
-          <button type="submit" class="btn btn-success">Add Campground</button>
+<div class="container d-flex justify-content-center align-items-center mt-5">
+  <div class="row">
+      <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+          <div class="card shadow mb-5 mt-0">
+              <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+                  alt="" class="card-img-top" />
+              <div class="card-body">
+                  <h5 class="card-title">Register</h5>
+                  <form action="/register" method="POST" class="validated-form" novalidate>
+                      <div class="mb-3">
+                          <label class="form-label" for="username">Username</label>
+                          <input class="form-control" type="text" id="username" name="username" required autofocus>
+                          <div class="valid-feedback">
+                              Looks good!
+                          </div>
+                      </div>
+                      <div class="mb-3">
+                          <label class="form-label" for="email">Email</label>
+                          <input class="form-control" type="email" id="email" name="email" required>
+                          <div class="valid-feedback">
+                              Looks good!
+                          </div>
+                      </div>
+                      <div class="mb-3">
+                          <label class="form-label" for="password">Password</label>
+                          <input class="form-control" type="password" id="password" name="password" required>
+                          <div class="valid-feedback">
+                              Looks good!
+                          </div>
+                      </div>
+                      <button class="btn btn-success btn-block">Register</button>
+                  </form>
 
-        
-            
-            
+              </div>
           </div>
-          
-    </form>
-</div>    
+      </div>
+  </div>
+</div>
