--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-md-8">
                     <h5 class="card-title"><%= campground.title %></h5>
-                    <div class="card-title"><%= campground.properties.popUpMarkup %> </div>
+                    <!-- <div class="card-title"><%= campground.properties.popUpMarkup %> </div> -->
                     <p class="card-text"><%= campground.description %></p>
                     <p class="card-text text-muted"><%= campground.location %></p>
                     <a href="/campground/<%= campground.id %>" class="btn btn-primary d-inline "><%= campground.title %></a>
